Closed Bug 1418389 Opened 8 years ago Closed 8 years ago

~5% speedometer regression around Nov 15

Categories

(Core :: Memory Allocator, defect)

x86_64
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox59 --- fixed

People

(Reporter: kbrosnan, Assigned: glandium)

References

Details

(Keywords: perf)

Attachments

(2 files)

There is a 2 point change in the speedometer score on the 15th. Both Perfherder and arwefastyet show this regression. Need some help figuring out what regressed this. It is not a sharp line. https://treeherder.mozilla.org/perf.html#/graphs?timerange=604800&series=mozilla-inbound,1572499,1,1&series=autoland,1569047,1,1&series=mozilla-central,1571695,1,1
Is this reproducable locally? If so, you could run a mozregression.
(In reply to Andrew Overholt [:overholt] from comment #2) > It doesn't look like arewefastyet reflects this dip: > https://arewefastyet.com/#machine=36&view=single&suite=speedometer- > misc&subtest=score You have to zoom in by selecting a range on the graph, but it does show our score noticeably worsening around the same time.
Flags: needinfo?(nihsanullah)
the 2-3% regression on November 15th is from bug 1417234, :glandium- I see you wrote the patch in that bug, can you look into this regression?
Blocks: 1417234, 1416994
Component: General → Memory Allocator
Flags: needinfo?(mh+mozilla)
Assignee: nobody → mh+mozilla
Flags: needinfo?(mh+mozilla)
(In reply to Joel Maher ( :jmaher) (UTC-5) from comment #4) > the 2-3% regression on November 15th So is it 2-3% or 5% as the bug summary says?
Flags: needinfo?(jmaher)
Attachment #8931193 - Flags: review?(n.nethercote) → review+
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
it is 2-3%, we see an overall 5% regression, but the issue on the 15th is 2-3% depending on the config. Also when there is some noise, it is hard to know the exact regression- but I would safely say 2-3% it is :)
Flags: needinfo?(jmaher)
Is the remainder of the regression clear enough to attribute to specific change(s)? If we had a 5% regression, and won back 2-3%, I don't think we should stop there.
there is no clear change that we can see, the one issue on Nov 15th is the single point where we can easily see a change.
(In reply to Joel Maher ( :jmaher) (UTC-5) from comment #12) > there is no clear change that we can see, the one issue on Nov 15th is the > single point where we can easily see a change. That's unfortunate. Given how hard it is to squeeze even 1% out of Speedometer these days, it's much easier to improve our speed by un-regressing something than it is to make new gains. If Talos can't tell us, then maybe the profiler can? Jan/Mike, do you still dig into profiles these days? It might be worth taking a fresh look to see if the past weeks have introduced any new low-hanging fruit?
Flags: needinfo?(mconley)
Flags: needinfo?(jdemooij)
Bug 1392841 probably also regressed Speedometer :/
Flags: needinfo?(jdemooij)
Bug 1392841 does seem like something that would contribute to this - one of the things blocking it from landing for 57 was a Speedometer regression that, as far as I can tell, was never resolved. jduell suggested a backout in bug 1392841. Perhaps we should back out RCWN on try and see if the numbers recover. In the meantime, I've done retriggers on the Speedometer jobs on inbound on the push just before and just after RWCN was enabled. There's a lot of noise in these graphs, which makes it hard to pin the issue on any one commit. (In reply to David Major [:dmajor] from comment #13) > If Talos can't tell us, then maybe the profiler can? Jan/Mike, do you still > dig into profiles these days? It might be worth taking a fresh look to see > if the past weeks have introduced any new low-hanging fruit? I've personally not had much luck using the Profiler to debug Speedometer regressions this small - I attempted, and failed, to do so in bug 1392841.
Flags: needinfo?(mconley)
Clearly ni on Naveed as he no longer works at Mozilla.
Flags: needinfo?(nihsanullah)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: